feat: Se actualizan los endpoints asociados a las rutas de usuarios
